--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-textinput-effects": "^0.6.3",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
